--- a/aik-app/aik-manager/src/main/webapp/templates/login_error.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/login_error.html
@@ -26,9 +26,9 @@
   
   <h1 class="seth1">系统消息</h1>
   <div class="bigok">
-    <div class="bigokimg"><img th:src="@{/static/assets/img/no_image.gif}" width="121" height="113" /></div>
     <div class="bigleft">
       <ul>
+      	<li><img th:src="@{/static/assets/img/error.jpg}" width="121" height="113" /></li>
         <li>登陆失败！</li>
         <li class="hui">用户名、密码有至少一项不正确！</li>
 		<li class="hui">3秒后自动为您跳转到登陆界面！</li>
