--- a/aik-app/aik-manager/src/main/webapp/templates/dietRecord/dietRecordManage.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/dietRecord/dietRecordManage.html
@@ -46,7 +46,7 @@
 									<div class="form-group">
 										<label class="control-label col-md-3">记录开始时间</label>
 										<div class="col-md-9">
-											<input readonly class="form-control date-picker" name="inTime" id="inTime" size="16" type="text" value=""
+											<input readonly class="form-control date-picker" name="starttime" id="starttime" size="16" type="text" value=""
 											 data-date-format="yyyy-mm-dd" data-date-viewmode="years"/>
 										</div>
 									</div>
@@ -55,7 +55,7 @@
 									<div class="form-group">
 										<label class="control-label col-md-3">记录结束时间</label>
 										<div class="col-md-9">
-											<input readonly class="form-control date-picker" name="outTime" id="outTime" size="16" type="text" value=""
+											<input readonly class="form-control date-picker" name="endtime" id="endtime" size="16" type="text" value=""
 											  data-date-format="yyyy-mm-dd" data-date-viewmode="years"/>
 										</div>
 									</div>
@@ -181,11 +181,11 @@
     			var _this = this;
     			
     			//绑定查询单击事件
-    			jQuery("#inTime").datepicker({
+    			jQuery("#starttime").datepicker({
     				language: 'zh-CN',
     				autoclose:true
     			});
-    			jQuery("#outTime").datepicker({
+    			jQuery("#endtime").datepicker({
     				language: 'zh-CN',
     				autoclose:true
     			});
