--- a/aik-app/aik-manager/src/main/webapp/static/assets/css/pages/about-us.css
+++ b/aik-app/aik-manager/src/main/webapp/static/assets/css/pages/about-us.css
@@ -6,8 +6,8 @@ Anout Us Page
   margin-bottom: 0;
   padding: 0 10px 10px;
   background: #fcfcfc;
+  color: red;
 }
-
 .meet-our-team small {
   display:block; 
   font-size:12px;
